--- a/app/templates/reference.html
+++ b/app/templates/reference.html
@@ -17,31 +17,33 @@
         <a href="/chatbot/" class="reference-keyword">chatbot</a>
       </div>
       <div class="reference-right-section">
-        <a href="/faq/" class="FAQ">문의</a>
         {% if request.user.is_authenticated %}
-        <span class="user-info">
-          {{ request.session.display_name|default:request.user.username }} 님
-          <a href="/mypage" class="logout">마이페이지</a>
-          <a href="{% url 'logout' %}" class="logout">로그아웃</a>
-        </span>
+          <span class="user-info">
+            {{ request.session.display_name|default:request.user.username }} 님
+            <a href="/mypage" class="reference-mypage">마이페이지</a>
+            <a href="{% url 'logout' %}" class="reference-logout">로그아웃</a>
+          </span>
         {% else %}
-        <a href="/login/" class="login">로그인</a>
-        <a href="/register/" class="createaccount">회원가입</a>
+          <a href="/login/" class="reference-login">로그인</a>
+          <a href="/register/" class="reference-createaccount">회원가입</a>
         {% endif %}
       </div>
     </section>
-    {% block search %}{% endblock %} {% block activate %}{% endblock %} {% block login %}{% endblock %} {% comment %}
-    dkjf {% endcomment %} {% block choose %} {% endblock %} {% block content %}{% endblock %} {% comment %}dfs
-    {%endcomment %} {% block script %} {% endblock %}
-    <div class="footer">
-      <div class="footer-upper-box">
-        <div class="box">김혜원</div>
-        <div class="box">박찬우</div>
-        <div class="box">변해민</div>
-      </div>
-      <a href="https://github.com/B2O1/seoseong_ida" target="_blank" class="reference-footer-link"
-        >https://github.com/B2O1/seoseong_ida</a
-      >
+    <main id="ref-main">
+      {% block search %}{% endblock %}
+      {% block activate %}{% endblock %}
+      {% block login %}{% endblock %}
+      {% block choose %}{% endblock %}
+      {% block content %}{% endblock %}
+    </main>
+
+    {% block script %}{% endblock %}
+
+    <div class="reference-footer">
+      <a href="https://github.com/B2O1/seoseong_ida" target="_blank" class="reference-footer-link">
+        Email
+      </a>
+      <a href="/faq/" class="reference-FAQ">문의</a>
     </div>
   </body>
 </html>
